--- a/Calculater/App.config
+++ b/Calculater/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<appSettings>
-		<add key="DbConnectionString" value="server=localhost;user=root;database=test;port=3306;password=admin" />
+		<add key="DbConnectionString" value="server=###;user=###;database=###;port=###;password=###" />
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
